# ptest

./: CMakeLists.txt  main.cpp
src/: WordTree.hpp
src/nTree/: Node.hpp  Tree.hpp
